--- a/index.html
+++ b/index.html
@@ -26,18 +26,42 @@
             <div class="h-bot__image"></div>
         </div>
     </div>
-    <div class="main-bot">
-        <div class="main-bot__container"></div>
+    <div class="main">
+        <div class="main-header">Some random information</div>
+        <div class="main-items">
+            <div class="main-i">
+                <img src="" alt="">
+                <div class="main-i__text">testtesttest</div>
+            </div>
+            <div class="main-i">
+                <img src="" alt="">
+                <div class="main-i__text">testtesttest</div>
+            </div>
+            <div class="main-i">
+                <img src="" alt="">
+                <div class="main-i__text">testtesttest</div>
+            </div>
+            <div class="main-i">
+                <img src="" alt="">
+                <div class="main-i__text">testtesttest</div>
+            </div>
+        </div>
     </div>
     <div class="quote">
-        <div class="quote__container"></div>
+        <div class="quote__ctr">
+            <div class="quote__ctr__quote">iasooimsadsamioasim</div>
+            <div class="quote__ctr__author">asdasdas, asodaod</div>
+        </div>
     </div>
-    <div class="signup">
-        Call to action! it's time
-        sign up for aosjdoasdjasjdkas
-        <button>Sign up</button>
+    <div class="sign-up">
+        <div class="sign-up__call">
+            <span class="sign-up__call--t">Call to action! it's time</span>
+            sign up for aosjdoasdjasjdkas
+        </div>
+        <div class="sign-up__action">
+            <button>Sign up</button>
+        </div>
     </div>
-    <div class="footer">footer</div>
-
+    <div class="footer">Copyright © The Odin Project 2022</div>
 </body>
 </html>
