added a few image files

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
     <div class="h">
         <div class="h-top">
-            <div class="h-top__logo">Header Logo</div>
+            <div class="h-top__logo">OSU 2</div>
             <div class="h-top__links">
-                <a href="">Header link 1</a>
-                <a href="">Header link 2</a>
-                <a href="">Header link 3</a>
+                <a href="">Ranking</a>
+                <a href="">Beatmap</a>
+                <a href="">Forum</a>
             </div>
         </div>
         <div class="h-bot">
             <div class="h-bot__description">
-                <p>This website is awesome!</p>
+                <p>OSU 2 IS AWESOME(u must try)</p>
                 <p>descriptive description aoisdoasijdioasidjoiasjdoisajoidjaosidjoiajsd</p>
                 <button class="h-bot__description-btn">Sign up</button>
             </div>
@@ -27,39 +27,39 @@
         </div>
     </div>
     <div class="main">
-        <div class="main-header">Some random information</div>
+        <div class="main-header">IN OSU 2, We have these new things for you...</div>
         <div class="main-items">
             <div class="main-i">
-                <img src="" alt="">
-                <div class="main-i__text">testtesttest</div>
+                <img src="resources/anime-pp-jumps.jpg" alt="anime girl eating a burger">
+                <div class="main-i__text">More anime pp jumps! sub text with extra spaces now to ensure that it can wrapping</div>
             </div>
             <div class="main-i">
-                <img src="" alt="">
-                <div class="main-i__text">testtesttest</div>
+                <img src="resources/impossible.jpg" alt="the osu beatmap centipede">
+                <div class="main-i__text">Double amount of Circles (Because why not?) (We also get rid of chinese hip-hop, fuck yeah)</div>
             </div>
             <div class="main-i">
-                <img src="" alt="">
-                <div class="main-i__text">testtesttest</div>
+                <img src="resources/johnny.png" alt="johnny">
+                <div class="main-i__text">Deviouspanda</div>
             </div>
             <div class="main-i">
-                <img src="" alt="">
-                <div class="main-i__text">testtesttest</div>
+                <img src="resources/osu-feet.gif" alt="the osu feetmap niko(versus whitecat)">
+                <div class="main-i__text">Slider feet</div>
             </div>
         </div>
     </div>
     <div class="quote">
         <div class="quote__ctr">
-            <div class="quote__ctr__quote">iasooimsadsamioasim</div>
-            <div class="quote__ctr__author">asdasdas, asodaod</div>
+            <div class="quote__ctr__content">In past versions of osu!, PP(Performance Point) system has been notoriously seen as one that's easy to abuse. Well, not anymore. In OSU 2, your pp is measured by OSU 2 Staff team(wafer) measuring your pp in real life!(genetic issue)</div>
+            <div class="quote__ctr__author">WhiteCat, CEO of OSU</div>
         </div>
     </div>
     <div class="sign-up">
-        <div class="sign-up__call">
-            <span class="sign-up__call--t">Call to action! it's time</span>
-            sign up for aosjdoasdjasjdkas
-        </div>
-        <div class="sign-up__action">
-            <button>Sign up</button>
+        <div class="sign-up__ctr">
+            <div class="sign-up__ctr__call">
+                <span class="sign-up__ctr__call__h">Call to action! it's time</span>
+                Sign up for more crazy fun OSU 2 content! You won't regret it!
+            </div>
+                <button class="sign-up__ctr__action">Sign up</button>
         </div>
     </div>
     <div class="footer">Copyright © The Odin Project 2022</div>
