Added header layout

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </div>
         <div class="h-bot">
             <div class="h-bot__description">
-                <p>OSU 2 IS AWESOME(u must try)</p>
-                <p>descriptive description aoisdoasijdioasidjoiasjdoisajoidjaosidjoiajsd</p>
+                <span class="h-bot__description-h">OSU 2 IS AWESOME</span>
+                this description is brought to you by many text dot gang, we support many many texts, and a lot more! even more text because why not? here's even more here there you go!
                 <button class="h-bot__description-btn">Sign up</button>
             </div>
             <div class="h-bot__image"></div>
